# bevy-rust-wasm-experiments

./: Cargo.toml  LICENSE  Makefile  README.md  dev.html  fake-build-wasm.sh
.github/workflows/: deploy-preview.yml  deploy-production.yml  deploy.yml
src/: audio.rs  ball.rs  colors.rs  debug.rs  enemies.rs  ennemies.rs  main.rs  player.rs  resizable.rs  state.rs  stop_loop.rs  texture.rs  ui.rs
src/wasm/: mod.rs
www/: .gitignore  global.js  index.html  main.js  network.css  package-lock.json  package.json  style.css  vite.config.js
www/components/: README.md  footer-display.js  qrcode-display.js  twitter-button.js
www/public/components/: footer-display.js
