[package]
name = "bevy-rust-wasm-experiments"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.9.1"
bevy-inspector-egui = "0.14.0"
wasm-bindgen = "0.2.84"
iyes_loopless = "0.9.1"
getrandom = { version = "0.2.8", features = ["js"] }
rand = "0.8.5"

[dependencies.web-sys]
version = "0.3.60"
features = ['Window']

# https://bevyengine.org/learn/book/getting-started/setup/#compile-with-performance-optimizations
[profile.release]
opt-level = 's'
lto = "thin"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
